--- a/manustore/app/views/categories/index.html.erb
+++ b/manustore/app/views/categories/index.html.erb
@@ -12,9 +12,7 @@
   <tbody>
     <% @categories.each do |category| %>
       <tr>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	      <td><a href="/products?category=<%= category.id %>"><%= category.name %></a></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +20,3 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
