--- a/manustore/app/views/products/index.html.erb
+++ b/manustore/app/views/products/index.html.erb
@@ -1,6 +1,9 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Products</h1>
+<% if @category then%>
+	<h1><%= @category.name %>/Products</h1>
+<% else %>
+	<h1>Products</h1>
+<% end %>
 
 <table>
   <thead>
@@ -12,9 +15,8 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= product.name %></td>
+        <td><%= product.price %></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +24,3 @@
 
 <br>
 
-<%= link_to 'New Product', new_product_path %>
