--- a/manustore/app/views/categories/index.html.erb
+++ b/manustore/app/views/categories/index.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <% @categories.each do |category| %>
       <tr>
-	      <td><a href="/products?category=<%= category.id %>"><%= category.name %></a></td>
+	      <td><a href="/products?offset=0&category=<%= category.id %>"><%= category.name %></a></td>
       </tr>
     <% end %>
   </tbody>
